--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "arangojs": "^8.6.0",
+    "command-line-args": "^6.0.0",
+    "command-line-usage": "^7.0.2",
+    "commander": "^12.1.0",
     "natural": "^7.1.0"
   }
 }
